--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@
 
 body {
     font-family: 'Work Sans', sans-serif;
-     margin: 0;
-     padding: 0;
-     height: 4760px;
+    margin: 0;
+    padding: 0;
+    height: 4760px;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .btn-primary {
     margin-top: 30px;
     border-style: none;
@@ -27,7 +29,7 @@ body {
 
 /* header style  */
 header {
-    background: rgba(255, 144, 14, 0.10);   
+    background: rgba(255, 144, 14, 0.10);
 }
 
 .navbar {
@@ -75,39 +77,119 @@ header {
 }
 
 /* Section two Styles */
-.section-two{
+.section-two {
     margin-top: 85px;
 }
- .quick-list-section{ 
-    align-items: center; 
+
+.quick-list-section {
+    align-items: center;
     gap: 80px;
     display: flex;
     margin: 0px auto;
- }
- .img-group{
+}
+
+.img-group {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
- }
- .img-group img{
+}
+
+.img-group img {
 
     margin: 5px;
- }
- .quick-item h4{
+}
+
+.quick-item h4 {
     margin: 0;
     margin-bottom: 20px;
     font-weight: 600;
     font-size: 45px;
- }
- .quick-list{
+}
+
+.quick-list {
     font-weight: normal;
     color: #727272;
- }
- .features{
+}
+
+.features {
     color: #FF900E;
- }
- .quick-item p{
+}
+
+.quick-item p {
     margin: 0;
     font-size: 16px;
     line-height: 25px;
     color: #727272;
- }
+}
+
+/* Section three styles */
+.section-three {
+    margin-top: 130px;
+}
+.title-box{
+    margin-right: 20px;
+    width: 5px;
+    height: 100px;
+    background: #FF900E;
+}
+.three-title{
+    display: flex;
+}
+.features-section {
+    display: flex;
+    gap: 100px;
+}
+
+.features-text-side h2 {
+    font-size: 45px;
+    margin: 0; 
+}
+.f-p{
+    font-weight: 600;
+}
+
+.features-text-side p {
+    color: #727272;
+    font-size: 16px;
+}
+
+.features-cart {
+    margin-top: 30px;
+    background-color: white;
+    padding: 30px;
+    box-shadow: 0 4px 10px 0 rgba(226, 226, 226, 0.2), 0 6px 10px 0 rgba(180, 180, 180, 0.19);
+}
+.img-section img{
+    margin-left: 80px;
+}
+
+.img-bottom-box {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 342px;
+    height: 200px;
+    border-radius: 8px;
+    background: #FF900E;
+}
+
+.img-bottom-box {
+    position: relative;
+    margin-top: -120px;
+    z-index: 1;  
+}
+
+.ten {
+    margin: 0;
+    font-weight: bold;
+    font-size: 45px;
+    color: white;
+}
+
+.exp {
+    margin: 0;
+    color: white;
+    font-weight: normal;
+    font-size: 25px;
+}
